--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,10 @@
     "cors": "^2.8.5",
     "debug": "^4.1.1",
     "express": "^4.17.1",
+    "install": "^0.13.0",
+    "moment": "^2.24.0",
     "nodemon": "^2.0.2",
+    "npm": "^6.14.4",
     "pug": "^2.0.4"
   },
   "nodemonConfig": {
