--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "node-ssh": "^8.0.0",
     "tcp-ping": "git+https://git@github.com/mtrusczyk/tcp-ping.git"
   }
